{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 124,
  "lineage": "32ec8501-f238-d826-30c3-dab7b0ff4106",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0dbae9a84e190b904",
            "domain": "vpc",
            "id": "eipalloc-0ad9f209523fdde8e",
            "network_border_group": "us-east-2",
            "network_interface": "eni-01fc55a6131b7ffb0",
            "private_dns": "ip-10-0-10-59.us-east-2.compute.internal",
            "private_ip": "10.0.10.59",
            "public_dns": "ec2-18-219-152-146.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.152.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "NAT Gateway EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b29b6e62f2343b46",
            "arn": "arn:aws:ec2:us-east-2:721932591131:instance/i-0b43a32db49f6e767",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b43a32db49f6e767",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "taskkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ad79203c89fc94cf",
            "private_dns": "ip-10-0-20-20.us-east-2.compute.internal",
            "private_ip": "10.0.20.20",
            "public_ip": "3.15.14.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-091715ba98312d7fc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8f1eb2cfe6cd9a3",
            "tags": {
              "Name": "MySQL Server"
            },
            "tags_all": {
              "Name": "MySQL Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00bf6d83dea62f616"
            ]
          },
          "dependencies": [
            "data.aws_ami.latest_ubuntu",
            "aws_security_group.db",
            "aws_subnet.private",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b29b6e62f2343b46",
            "arn": "arn:aws:ec2:us-east-2:721932591131:instance/i-086533ebff3ca5ee4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-086533ebff3ca5ee4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "taskkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d7e520259febbfdf",
            "private_dns": "ip-10-0-10-20.us-east-2.compute.internal",
            "private_ip": "10.0.10.20",
            "public_ip": "18.188.240.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-037933a3227ff9688",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d63099f9028e3f39",
            "tags": {
              "Name": "TomCat Server"
            },
            "tags_all": {
              "Name": "TomCat Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e30673817239348"
            ]
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.latest_ubuntu",
            "aws_security_group.tomcat"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:721932591131:internet-gateway/igw-0c04cd9aec72ac1dd",
            "id": "igw-0c04cd9aec72ac1dd",
            "owner_id": "721932591131",
            "tags": {
              "Name": "Main GW"
            },
            "tags_all": {
              "Name": "Main GW"
            },
            "vpc_id": "vpc-030a4dfc7a14e4087"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad9f209523fdde8e",
            "connectivity_type": "public",
            "id": "nat-069d30abf7d09402b",
            "network_interface_id": "eni-01fc55a6131b7ffb0",
            "private_ip": "10.0.10.59",
            "public_ip": "18.219.152.146",
            "subnet_id": "subnet-0d63099f9028e3f39",
            "tags": {
              "Name": "Main NAT Gateway"
            },
            "tags_all": {
              "Name": "Main NAT Gateway"
            }
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0a313ff757e1ffc65",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:98:d9:1c:44:f6",
            "private_ip": "10.0.20.10",
            "private_ips": [
              "10.0.20.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-032d82727184bb152"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8f1eb2cfe6cd9a3",
            "tags": {
              "Name": "db_network_interface"
            },
            "tags_all": {
              "Name": "db_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0bb811c5e2e084e5d",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:4d:0c:94:b9:7c",
            "private_ip": "10.0.10.10",
            "private_ips": [
              "10.0.10.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-032d82727184bb152"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d63099f9028e3f39",
            "tags": {
              "Name": "tomcat_internal_network_interface"
            },
            "tags_all": {
              "Name": "tomcat_internal_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:721932591131:route-table/rtb-0ad67e8d0c5b6e33d",
            "id": "rtb-0ad67e8d0c5b6e33d",
            "owner_id": "721932591131",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-069d30abf7d09402b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "vpc_id": "vpc-030a4dfc7a14e4087"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:721932591131:route-table/rtb-0a04ac75457801264",
            "id": "rtb-0a04ac75457801264",
            "owner_id": "721932591131",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c04cd9aec72ac1dd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "vpc_id": "vpc-030a4dfc7a14e4087"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02088d159ece55dd7",
            "route_table_id": "rtb-0ad67e8d0c5b6e33d",
            "subnet_id": "subnet-0f8f1eb2cfe6cd9a3"
          },
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a38523fbe8fd59c",
            "route_table_id": "rtb-0a04ac75457801264",
            "subnet_id": "subnet-0d63099f9028e3f39"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:721932591131:security-group/sg-00bf6d83dea62f616",
            "description": "My DB_Security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bf6d83dea62f616",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DB_Security_group",
            "name_prefix": "",
            "owner_id": "721932591131",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-030a4dfc7a14e4087"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:721932591131:security-group/sg-03e30673817239348",
            "description": "My TomCAT_Security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e30673817239348",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "TomCAT_Security_group",
            "name_prefix": "",
            "owner_id": "721932591131",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-030a4dfc7a14e4087"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:721932591131:subnet/subnet-0f8f1eb2cfe6cd9a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0f8f1eb2cfe6cd9a3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721932591131",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-030a4dfc7a14e4087"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:721932591131:subnet/subnet-0d63099f9028e3f39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0d63099f9028e3f39",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721932591131",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-030a4dfc7a14e4087"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:721932591131:vpc/vpc-030a4dfc7a14e4087",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d202239a2d58bd38",
            "default_route_table_id": "rtb-03c090cfda2099cc0",
            "default_security_group_id": "sg-032d82727184bb152",
            "dhcp_options_id": "dopt-5aacce31",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-030a4dfc7a14e4087",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03c090cfda2099cc0",
            "owner_id": "721932591131",
            "tags": {
              "Name": "Main VPC"
            },
            "tags_all": {
              "Name": "Main VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}